--- a/CalvaryOpebBibleWebsite/Views/Beliefs/Index.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Beliefs/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="jumbotron">
     <h2>Beliefs</h2>
 
-    <table class="table">
+    <table class="table" style='color: #222;border-radius: 5px;box-sizing: border-box; border-color:#222'>
 
 
         @foreach (var item in Model)
@@ -16,10 +16,10 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.BeliefTitle)
                 </td>
-                <td style=" width:90%" >
+                <td style=" width:90%">
                     @Html.Raw(item.BeliefDetails.Replace(Environment.NewLine, "<br/>"))
                 </td>
-               
+
             </tr>
         }
 
