--- a/CalvaryOpebBibleWebsite/Views/Images/LiveStream.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Images/LiveStream.cshtml
@@ -6,7 +6,7 @@
 <div class="jumbotron">
     <h2 style="margin-left:40%;">Live Stream</h2>
     <br />
-    <div style="width:65%; margin-left:15%">
+    <div style="width:65%; margin-left:15%; text-align:center;">
         <p>
             Watch a live stream of our service, or watch previously recorded services. 
             <br />
@@ -14,7 +14,7 @@
             Before you watch make sure to pause and then start the video to make sure it plays the correct audio.
         </p>
     </div>
-    <div style=" width:50%; margin-left:25%;">
+    <div style=" width:50%; margin-left:20%;">
         <iframe frameborder="0" width="975" height="800" src="http://www.yourstreamlive.com/embed/iframe/tabs/1719?include_chat=no&include_countdown=yes&countdown_text_color=black&show_powered_by=yes&show_live_event_schedule_link=yes&event_types_on_tabs=no&live_player_width=640&live_viewer_height=480&include_sharing=yes&skin=six" marginheight="0" marginwidth="0" scrolling="auto" allowtransparency="yes" name="tabs" id="tabs"></iframe>
     </div>
 </div>
