--- a/CalvaryOpebBibleWebsite/Views/Pastors/Index.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Pastors/Index.cshtml
@@ -4,39 +4,38 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="jumbotron">
+<div class="jumbotron" >
     <h2>Pastors</h2>
-    <table class="table" style="width:100%">
-      
-            
-            @foreach (var item in Model)
-            {
-                <tr>
-                    <th>
+    <table class="table" style='color: #222;border-radius: 5px;box-sizing: border-box; border-color:#222'>
+
+
+        @foreach (var item in Model)
+        {
+            <tr>
+                <th>
                     @Html.DisplayFor(modelItem => item.PastorName)
-                    </th>
-                    <th>
-                      @Html.DisplayFor(modelItem => item.Title)        
-                    </th>
-                </tr>
-                
-    <tr>
-        
-    </tr>
-    <tr>
-        <td>
-            <img style="max-height:300px; max-width:300px" src="@Url.Content("~/Content/Images/" + System.IO.Path.GetFileName(item.PastorImagePath))" />
-        </td>
+                </th>
+                <th>
+                    @Html.DisplayFor(modelItem => item.Title)
+                </th>
+            </tr>
 
-        <td style="width:60%;">
+            <tr></tr>
+            <tr>
+                <td>
+                    <img style="max-height:300px; max-width:300px" src="@Url.Content("~/Content/Images/" + System.IO.Path.GetFileName(item.PastorImagePath))" class="thumbnail" />
+                </td>
 
-            @Html.Raw(item.Details.Replace(Environment.NewLine, "<br/>"))
-                      
-        
-        </td>
-    </tr>
+                <td style="width:60%;">
 
-            }
+                    @Html.Raw(item.Details.Replace(Environment.NewLine, "<br/>"))
 
-        </table>
+
+                </td>
+            </tr>
+
+        }
+
+    </table>
+
 </div>
