--- a/CalvaryOpebBibleWebsite/Views/Event/Calendar.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Event/Calendar.cshtml
@@ -8,8 +8,9 @@
     <title>Calendar</title>
     <link href="~/Content/CustomCSS/CalendarStyles.css" rel="stylesheet" />
 </head>
-<h2>Index</h2>
+
 <div class="jumbotron" style="width:90%; margin-left:5%; ">
+    <h2 style="margin-left:40%; margin-bottom:3%">Calendar</h2>
     <div>
         <script type="text/javascript">
 
