Fixed issue with not pushing paging packages to git.
Made videos have a title which is clickable and takes them to a video
page.

--- a/CalvaryOpebBibleWebsite/Views/Images/Videos.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Images/Videos.cshtml
@@ -22,9 +22,13 @@
             {
 
                 <td style="float:left; margin:2.5%;height:250px; width:250px">
-                    <video style=" max-height:250px; max-width:250px" src="@Url.Content("~/Content/Images/" + System.IO.Path.GetFileName(item.ImagePath))" controls />
+                    <a href="@Url.Action("ViewImage","Images", new { id = item.ID})">
+                        <p> @Html.DisplayFor(modelItem => item.Title)</p>
+                    </a>
+                        <video style=" max-height:250px; max-width:250px" src="@Url.Content("~/Content/Images/" + System.IO.Path.GetFileName(item.ImagePath))" controls />
+                   
 
-                </td>
+</td>
 
             }
         </tr>
