--- a/CalvaryOpebBibleWebsite/Views/Images/ViewImage.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Images/ViewImage.cshtml
@@ -7,26 +7,81 @@
 <div class="jumbotron">
     <div>
         <hr />
-        <dl class="dl-horizontal">
-           
+       
+            @if (Model.Category != "Video")
+            {
+                <dl class="dl-horizontal">
+                    <dt>@Html.DisplayFor(model => model.Title) </dt>
+                    <dd><br /></dd>
+                    <dd><br /></dd>
+                    <dt>@Html.DisplayFor(model => model.Category)</dt>
+
+                    <dd>
+                        <img style="max-height:500px; max-width:500px" src="@Url.Content("~/Content/Images/" + System.IO.Path.GetFileName(Model.ImagePath))" />
+                    </dd>
+                    <dd><br /></dd>
+                    <dd>@Html.Raw(Model.Details.Replace(Environment.NewLine, "<br/>"))</dd>
+                </dl>
+            }
+        
+        @if (Model.Category == "Video")
+        {
+        <dl class="dl-horizontal" style="float:left;">
+
             <dt>@Html.DisplayFor(model => model.Title) </dt>
             <dd><br /></dd>
             <dd><br /></dd>
-            <dt>@Html.DisplayFor(model => model.Category)</dt>
-            <dd>
-                <img style="max-height:500px; max-width:500px" src="@Url.Content("~/Content/Images/" + System.IO.Path.GetFileName(Model.ImagePath))"  />
-            </dd>
-            <dd><br /></dd>
             <dd>@Html.Raw(Model.Details.Replace(Environment.NewLine, "<br/>"))</dd>
         </dl>
-
-        @using (Html.BeginForm())
-        {
-            @Html.AntiForgeryToken()
-
-            <div class="form-actions no-color">
-                @Html.ActionLink("Back to List", "Index")
-            </div>
+        <video style="margin-left:20%; height:500px; width:500px" src="@Url.Content("~/Content/Images/" + System.IO.Path.GetFileName(Model.ImagePath))" controls />
         }
+
+       
+        
     </div>
+@using (Html.BeginForm())
+        {
+    @Html.AntiForgeryToken()
+    
+    if (Model.Category == "Video")
+            {
+    <div class="form-actions no-color">
+        @Html.ActionLink("Back to Videos", "Videos")
+    </div>
+    }
+    
+    if (Model.Category == "Kids")
+    {
+        <div class="form-actions no-color">
+            @Html.ActionLink("Back to Kids Photos", "Kids")
+        </div>
+    }
+
+    if (Model.Category == "Sunday Church")
+    {
+        <div class="form-actions no-color">
+            @Html.ActionLink("Back to Sunday Church Photos", "SundayChurch")
+        </div>
+    }
+
+
+    if (Model.Category == "Community Group")
+    {
+        <div class="form-actions no-color">
+            @Html.ActionLink("Back to Community Group Photos", "CommunityGroups")
+        </div>
+    }
+
+    if (Model.Category == "Youth Group")
+    {
+        <div class="form-actions no-color">
+            @Html.ActionLink("Back to Youth Group Photos", "YouthGroup")
+        </div>
+    }
+    <br />
+    <div class="form-actions no-color">
+        @Html.ActionLink("Back to Complete List", "Index")
+    </div>
+
+        }
 </div>
