A few Layout changes and viewbag changes to display correct page header

--- a/CalvaryOpebBibleWebsite/Views/Event/AdminAll.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Event/AdminAll.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PagedList.IPagedList<CalvaryOpebBibleWebsite.Models.Event>
 @using PagedList.Mvc;
 @{
-    ViewBag.Title = "Events";
+    ViewBag.Title = "Admin All Events";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="jumbotron" style="width:90%; margin-left:5%; ">
