--- a/CalvaryOpebBibleWebsite/Views/Event/Index.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Event/Index.cshtml
@@ -73,7 +73,9 @@
         }
 
     </table>
-
+    @Html.ActionLink("View Calendar", "Calendar")
+    <br />
+    <br />
     Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
 
     @Html.PagedListPager(Model, page => Url.Action("Index",
