--- a/CalvaryOpebBibleWebsite/Views/Home/Index.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Home/Index.cshtml
@@ -16,10 +16,10 @@
 <div style="width:90%; margin-left:5%">
 
     <div class=" col-md-4" style="background-color:lightgray; border-style:none;border-bottom-color:lightgray; border-radius: 25px;height:200px;width:30%;margin:1.5%;">
-        <h2 style="text-align:center;">Our Mission</h2>
+        <h2 style="text-align:center;">About Us</h2>
         <p style="text-align:center;">
             <br />
-            Get connected with our congreagation, and our mission.
+            Learn more about Calvary and our missions!
         </p>
         <p style="text-align:center;">
             <br /><a class="btn btn-default" href="~/Home/About">Learn more &raquo;</a>
@@ -49,7 +49,7 @@
 
         <p style="text-align:center;">
             <br />
-            <a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a>
+            <a class="btn btn-default" href="~/Ministries/Index">Learn more &raquo;</a>
         </p>
     </div>
     </div>
