--- a/CalvaryOpebBibleWebsite/Views/Ministries/Create.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Ministries/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CalvaryOpebBibleWebsite.Models.Ministries
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Ministry";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="jumbotron">
