--- a/CalvaryOpebBibleWebsite/Views/Ministries/Delete.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Ministries/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CalvaryOpebBibleWebsite.Models.Ministries
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Ministry";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="jumbotron">
