--- a/CalvaryOpebBibleWebsite/Views/Shared/_Layout.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Shared/_Layout.cshtml
@@ -67,12 +67,12 @@
                         <ul class="nav navbar-nav navbar navbar-inverse" style="margin-top: -17px; padding-left: 15px;">
                             <li><a href="~/Images/LiveStream/">Live Stream</a></li>
                             <li><a href="~/Images/Index/">Photos</a></li>
-                            <li><a href="~/Images/Videos">Videos</a></li>
+                            <li><a href="~/Images/Videos/">Videos</a></li>
                         </ul>
                     <li style="height: 83px;">
                         @Html.ActionLink("Calendar", "Calendar", "Event")
                         <ul class="nav navbar-nav navbar navbar-inverse" style="margin-top: -17px; width: 90px; padding-left: 15px;">
-                            <li><a href="~/Event/Index">Events</a></li>
+                            <li><a href="~/Event/Index/">Events</a></li>
                         </ul>
                     </li>
                     <li style="height: 83px;">@Html.ActionLink("Contact", "Contact", "Home")</li>
