--- a/CalvaryOpebBibleWebsite/Views/Event/Calendar.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Event/Calendar.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<CalvaryOpebBibleWebsite.Models.Event>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Calendar";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <head>
@@ -185,4 +185,5 @@
     calendar();
 </script>
     </div>
+    @Html.ActionLink("View Events", "Index")
 </div>
