--- a/CalvaryOpebBibleWebsite/Views/Ministries/Details.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Ministries/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CalvaryOpebBibleWebsite.Models.Ministries
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Ministry Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="jumbotron">
